# kaitai_rust

./: Cargo.toml
src/: lib.rs
tests/: reader.rs  struct.rs
