[package]
name = "kaitai"
version = "0.1.0"
authors = [
	"Bradlee Speice <bradlee@speice.io>",
	"Oleh Dolhov <oleg.dolgov@gmail.com>",
	"Vitaly Reshetyuk <vitaly.askz.maknii@gmail.com>",
]
edition = "2018"

[dependencies]
byteorder = "1.3.1"
encoding = "0.2"
unicode-segmentation = "1.9.0"
flate2 = "1.0"
cp437 = "*"
